--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@rudserg/frontend-project-lvl1",
   "version": "1.0.0",
   "description": "JavaScript training project by Hexlet",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
